# ForwarderBot

./: .dockerignore  .env.dev.example  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.py  docker-compose-local.yml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
app/: __main__.py  bot.py  settings.py  vk_parser.py
docker/nginx/: Dockerfile  project.conf
docker/pgbouncer/: Dockerfile
docker/postgres/: Dockerfile
migrations/: env.py
migrations/versions/: 0daf2979c88c_add_idx_field_into_forward_model.py  330668cd2e5d_first_migration.py  49da7f41797d_add_new_field_into_target_model.py  7854e0f86887_rework_entities.py  a01f54e28486_rework_entities.py  b7c6349aeb7e_add_user_chat_models.py  bec7731a7aa2_add_user_chat_models.py  eff0d37febe3_first_migration.py  f7914a248a90_rework_entities.py
src/: __init__.py  __main__.py  bot.py  config.py  default_commands.py  loader.py  main.py  middleware.py  middlewares.py  prestart.sh  runner.py  settings.py  vk_parser.py
src/database/: __init__.py  base.py  crud.py  db.py  entities.py  models.py  repositories.py  schemas.py
src/filters/: __init__.py  subscriber.py  superuser.py
src/handlers/: __init__.py  base.py  chat.py  errors.py  start.py  superuser.py  superuser_settings.py  system.py  user_settings.py  users.py
src/handlers/markups/: __init__.py  base.py  user.py
src/handlers/states/: __init__.py  user_data.py  user_menu.py  user_vk_data.py
src/migrations/: env.py
src/services/: vk_parser.py
src/services/social/: broadcasters.py  utils.py
src/services/social/vk/: __init__.py  public.py
src/services/vk/: __init__.py  broadcaster.py  public.py
src/utils/: __init__.py  callbacks.py  constants.py  keyboards.py  logging.py  redis.py  scheduler.py
tests/: conftest.py
tests/migrations/: test_stairway.py
