[tool.poetry]
name = "forwardertestbot"
version = "0.1.0"
description = ""
authors = ["LehaDurotar <hwick1396@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Telegram api
aiogram = "^2.11.2"
# Database
alembic = "^1.5.3"
asyncpg = "^0.21.0"
psycopg2-binary = "^2.8.6"
gino = "^1.0.1"
# Vkontakte api
aiovk = "^4.0.0"
# Misc
loguru = "^0.5.3"
environs = "^9.3.0"
pydantic = "^1.7.3"
uvloop = "^0.15.0"
tenacity = "^6.3.1"
aioredis = "^1.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
# Linter, formatter, etc
black = "^20.8b1"
isort = "^5.7.0"
Faker = "^6.4.1"
pytest = "^6.2.2"
SQLAlchemy-Utils = "^0.36.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 110
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
  )/
)
'''

[tool.isort]
length_sort = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 110