[tool.poetry]
name = "forwarderbot"
version = "0.1.1"
description = ""
authors = ["LehaDurotar <hwick1396@gmail.com>", "kurkl <hwick1396@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
# Telegram api
aiogram = "^2.19"
# Database
SQLAlchemy = "^1.4.34"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
asyncpg = "^-1.25.0"
# Memory storage
redis = "^4.2.1"
aioredis = "^2.0.1"
# Vkontakte api
aiovk = "^4.0.0"
# Logging, retries, task scheduler, etc
environs = "^9.3.0"
APScheduler = "^3.7.0"
loguru = "^0.6.0"
pydantic = "^1.7.3"
tenacity = "^8.0.1"


[tool.poetry.dev-dependencies]
# Linter, formatter, testing, etc
black = "^22.3.0"
isort = "^5.7.0"
SQLAlchemy-Utils = "^0.36.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 110
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | migrations
    | dist
    | data
  )/
)
'''

[tool.isort]
length_sort = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 110